# TSP_GA

./: CMakeLists.txt  README.md
Reports/: TSP_GA_v1.doc
additional-files/: .$design.drawio.bkp  GA_Modification.md  design.drawio
src/: main.cpp
src/Algorithm/: Algorithm.cpp  Algorithm.h
src/algorithm/: Algorithm.cpp  Algorithm.h
src/crossover/: demo_cross_mut.cpp  demo_cross_mut.h  mating.cpp
src/data-structures/: Chromosome.h  Graph.h  Population.cpp  Population.h  PopulationList.h
src/mating/: mating.cpp  mating.h
src/new-generation-selection/: NewGenerationSelection.cpp  NewGenerationSelection.h
src/parents-selection/: RouletteWheelSelection.cpp  RouletteWheelSelection.h
src/parents_selection/: RouletteWheelSelection.cpp
src/randomizer/: Randomizer.cpp  Randomizer.h
src/ui/: Dialog.ui  dialog.cpp  dialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/controller/: CheckData.cpp  CheckData.h  ControllerUI.cpp  ControllerUI.h  Settings.h
